--- a/Nextras/Datagrid/Datagrid.latte
+++ b/Nextras/Datagrid/Datagrid.latte
@@ -3,8 +3,8 @@
  *
  * Copyright (c) 2012 Jan Skrasek (http://jan.skrasek.com)
  *
- * For the full copyright and license information, please view
- * the file license.txt that was distributed with this source code.
+ * @license    MIT
+ * @link       https://github.com/nextras
  *}
 <div class="datagrid" data-grid-name="{$control->getUniqueId()}">
 {snippet rows}
