head-col-actions block renamed to global-actions block

--- a/Nextras/Datagrid/Datagrid.latte
+++ b/Nextras/Datagrid/Datagrid.latte
@@ -32,7 +32,7 @@
 			{/if}
 		</th>
 	{/foreach}
-		<th class="col-actions">{ifset #head-col-actions}{include #head-col-actions}{/ifset}</th>
+		<th class="col-actions">{ifset #global-actions}{include #global-actions}{/ifset}</th>
 	</tr>
 
 	{if $hasFilter}
