Cols-actions contains primary value

--- a/Nextras/Datagrid/Datagrid.latte
+++ b/Nextras/Datagrid/Datagrid.latte
@@ -80,7 +80,7 @@
 				{/formContainer}
 			{else}
 				{ifset #col-actions}
-					{include #col-actions row => $row}
+					{include #col-actions row => $row, primary => $primary}
 				{elseif $hasEdit}
 					<a href="{link edit! $primary}" class="ajax editLink">Edit</a>
 				{/ifset}
