--- a/Nextras/Datagrid/Datagrid.latte
+++ b/Nextras/Datagrid/Datagrid.latte
@@ -46,8 +46,12 @@
 		</th>
 		{/foreach}
 		<th class="col-actions">
-			{input filter}
-			{if !empty($control->filter)}{input cancel}{/if}
+			{ifset #filter-actions}
+				{include #filter-actions showCancel => !empty($control->filter), _form => $_form, form => $form}
+			{else}
+				{input filter}
+				{if !empty($control->filter)}{input cancel}{/if}
+			{/ifset}
 		</th>
 	{/formContainer}
 	</tr>
