Added #table-close-tag block

--- a/Nextras/Datagrid/Datagrid.latte
+++ b/Nextras/Datagrid/Datagrid.latte
@@ -105,7 +105,11 @@
 	{?unset($_dynSnippets)}
 {/if}
 </tbody>
+{ifset #table-close-tag}
+{include #table-close-tag}
+{else}
 </table>
+{/ifset}
 {/form}
 {/snippet}
 </div>
