--- a/bootstrap-style/nextras.datagrid.less
+++ b/bootstrap-style/nextras.datagrid.less
@@ -21,7 +21,7 @@
 		}
 	}
 
-	.select,
+	select,
 	textarea,
 	input[type="text"],
 	input[type="password"],
@@ -43,5 +43,8 @@
 		width: 100%;
 		padding: 3px 3px;
 		margin-bottom: 0;
+	}
+	select {
+		padding: 2px 3px;
 	}
 }
