--- a/demo/app/templates/@layout.latte
+++ b/demo/app/templates/@layout.latte
@@ -19,6 +19,7 @@
 </head>
 <body>
 <script> document.body.className+=' js' </script>
+<a href="https://github.com/nextras/datagrid"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
 <div class="container">
 <div class="row">
 	<div class="span12">
