--- a/Nextras/Datagrid/Datagrid.latte
+++ b/Nextras/Datagrid/Datagrid.latte
@@ -1,10 +1,9 @@
 {**
  * This file is part of the Nextras community extensions of Nette Framework
  *
- * Copyright (c) 2012 Jan Skrasek (http://jan.skrasek.com)
- *
  * @license    MIT
  * @link       https://github.com/nextras
+ * @author     Jan Skrasek
  *}
 <div class="datagrid" data-grid-name="{$control->getUniqueId()}">
 {snippet rows}
