Boostrap-style: fixed block names

--- a/bootstrap-style/@bootstrap2.datagrid.latte
+++ b/bootstrap-style/@bootstrap2.datagrid.latte
@@ -2,18 +2,18 @@
 	<table class="table table-bordered table-condensed table-striped">
 {/define}
 
-{define filter-actions}
+{define global-filter-actions}
 	{input filter class => "btn btn-primary btn-small"}
 	{if $showCancel}
 		{input cancel class => "btn btn-small"}
 	{/if}
 {/define}
 
-{define edit-actions}
+{define row-edit-actions}
 	{input save class => "btn btn-primary btn-small"}
 	{input cancel class => "btn btn-small"}
 {/define}
 
-{define col-actions}
+{define row-actions}
 	<a href="{link edit! $primary}" data-datagrid-edit class="ajax btn btn-small btn-primary">Edit</a>
 {/define}
