--- a/bootstrap-style/bootstrap3.nextras.datagrid.less
+++ b/bootstrap-style/bootstrap3.nextras.datagrid.less
@@ -21,6 +21,21 @@
 			vertical-align: middle;
 		}
 	}
+	tfoot {
+		background: #EEE;
+		th {
+			text-align: center
+		}
+		.pagination {
+			margin: 5px;
+			> .active, > .active:hover {
+				a {
+					background: #FFF;
+					color: #333;
+				}
+			}
+		}
+	}
 	select {
 		height: auto;
 	}
