--- a/bootstrap-style/@bootstrap3.datagrid.latte
+++ b/bootstrap-style/@bootstrap3.datagrid.latte
@@ -27,3 +27,27 @@
 {define $rowActions}
 	<a href="{link edit! $primary}" data-datagrid-edit class="ajax btn btn-small btn-primary">Edit</a>
 {/define}
+
+{define pagination}
+<ul class="pagination">
+{if $paginator->isFirst()}
+	<li class="disabled"><a>« First</a></li>
+	<li class="disabled"><a>« Previous</a></li>
+{else}
+	<li><a href="{link paginate!, 'page' => 1}" class="ajax">« First</a></li>
+	<li><a href="{link paginate!, 'page' => $paginator->page - 1}" class="ajax">« Previous</a></li>
+{/if}
+
+<li class="active">
+	<a><strong>{$paginator->page}</strong> / {$paginator->pageCount}</a>
+</li>
+
+{if $paginator->isLast()}
+	<li class="disabled"><a>Next »</a></li>
+	<li class="disabled"><a>Last »</a></li>
+{else}
+	<li><a href="{link paginate!, 'page' => $paginator->page + 1}" class="ajax">Next »</a></li>
+	<li><a href="{link paginate!, 'page' => $paginator->pageCount}" class="ajax">Last »</a></li>
+{/if}
+</ul>
+{/define}
