--- a/bootstrap-style/bootstrap2.nextras.datagrid.less
+++ b/bootstrap-style/bootstrap2.nextras.datagrid.less
@@ -25,7 +25,21 @@
 			vertical-align: middle;
 		}
 	}
-
+	tfoot {
+		background: #EEE;
+		th {
+			text-align: center
+		}
+		.pagination {
+			margin: 5px;
+			> .active, > .active:hover {
+				a {
+					background: #FFF;
+					color: #333;
+				}
+			}
+		}
+	}
 	select,
 	textarea,
 	input[type="text"],
