--- a/bootstrap-style/bootstrap3.nextras.datagrid.css
+++ b/bootstrap-style/bootstrap3.nextras.datagrid.css
@@ -17,6 +17,20 @@
 .datagrid tbody td {
   vertical-align: middle;
 }
+.datagrid tfoot {
+  background: #EEE;
+}
+.datagrid tfoot th {
+  text-align: center;
+}
+.datagrid tfoot .pagination {
+  margin: 5px;
+}
+.datagrid tfoot .pagination > .active a,
+.datagrid tfoot .pagination > .active:hover a {
+  background: #FFF;
+  color: #333;
+}
 .datagrid select {
   height: auto;
 }
