--- a/Nextras/Datagrid/Datagrid.latte
+++ b/Nextras/Datagrid/Datagrid.latte
@@ -80,7 +80,14 @@
 		{foreach $columns as $column}
 			{var $cell = $control->getter($row, $column->name, FALSE)}
 			{if $editRow && $column->name != $rowPrimaryKey && isset($_form['edit'][$column->name])}
-				<td class="col-{$column->name}">{formContainer edit}{input $column->name}{/formContainer}</td>
+				<td class="col-{$column->name}">
+					{formContainer edit}
+						{input $column->name}
+						{if $_form[$column->name]->hasErrors()}
+							<p class="error" n:foreach="$_form[$column->name]->getErrors() as $error">{$error}</p>
+						{/if}
+					{/formContainer}
+				</td>
 			{else}
 				{ifset #col-$column->name}
 					{include #"col-{$column->name}" row => $row, cell => $cell}
