Fixed for Bootstrap 3 RC1

--- a/bootstrap-style/@bootstrap3.datagrid.latte
+++ b/bootstrap-style/@bootstrap3.datagrid.latte
@@ -5,7 +5,7 @@
 {define global-filter-actions}
 	{input filter class => "btn btn-primary btn-small"}
 	{if $showCancel}
-		{input cancel class => "btn btn-small"}
+		{input cancel class => "btn btn-default btn-small"}
 	{/if}
 {/define}
 
@@ -15,7 +15,7 @@
 
 {define row-edit-actions}
 	{input save class => "btn btn-primary btn-small"}
-	{input cancel class => "btn btn-small"}
+	{input cancel class => "btn btn-default btn-small"}
 {/define}
 
 {if $control->getEditFormFactory()}
