--- a/bootstrap-style/bootstrap3.nextras.datagrid.less
+++ b/bootstrap-style/bootstrap3.nextras.datagrid.less
@@ -5,6 +5,9 @@
 	.cols-actions {
 		text-align: center;
 	}
+	.btn {
+		margin-right: 3px;
+	}
 	thead {
 		.columns {
 			background: #EEE;
@@ -17,7 +20,7 @@
 		}
 	}
 	tbody {
-		td {
+		> tr > td {
 			vertical-align: middle;
 		}
 	}
