All templates uses redefine macro

--- a/bootstrap-style/@bootstrap2.datagrid.latte
+++ b/bootstrap-style/@bootstrap2.datagrid.latte
@@ -1,18 +1,18 @@
-{define table-open-tag}
+{redefine table-open-tag}
 	<table class="table table-bordered table-condensed table-striped">
-{/define}
+{/redefine}
 
-{define global-filter-actions}
+{redefine global-filter-actions}
 	{input filter class => "btn btn-primary btn-small"}
 	{if $showCancel}
 		{input cancel class => "btn btn-small"}
 	{/if}
-{/define}
+{/redefine}
 
-{define row-edit-actions}
+{redefine row-edit-actions}
 	{input save class => "btn btn-primary btn-small"}
 	{input cancel class => "btn btn-small"}
-{/define}
+{/redefine}
 
 {if $control->getEditFormFactory()}
 	{var $rowActions = 'row-actions'}
@@ -20,11 +20,11 @@
 	{var $rowActions = 'row-actions-do_not_render'}
 {/if}
 
-{define $rowActions}
+{redefine $rowActions}
 	<a href="{link edit! $primary}" data-datagrid-edit class="ajax btn btn-small btn-primary">Edit</a>
-{/define}
+{/redefine}
 
-{define pagination}
+{redefine pagination}
 <div class="pagination pagination-centered">
 	<ul>
 	{if $paginator->isFirst()}
@@ -48,4 +48,4 @@
 	{/if}
 	</ul>
 </div>
-{/define}
+{/redefine}
