--- a/bootstrap-style/@bootstrap3.datagrid.latte
+++ b/bootstrap-style/@bootstrap3.datagrid.latte
@@ -1,22 +1,22 @@
-{define table-open-tag}
+{redefine table-open-tag}
 	<table class="table table-bordered table-condensed table-striped">
-{/define}
+{/redefine}
 
-{define global-filter-actions}
+{redefine global-filter-actions}
 	{input filter class => "btn btn-primary btn-small"}
 	{if $showCancel}
 		{input cancel class => "btn btn-default btn-small"}
 	{/if}
-{/define}
+{/redefine}
 
-{define col-filter}
+{redefine col-filter}
 	{input $column->name class => "input-small"}
-{/define}
+{/redefine}
 
-{define row-edit-actions}
+{redefine row-edit-actions}
 	{input save class => "btn btn-primary btn-small"}
 	{input cancel class => "btn btn-default btn-small"}
-{/define}
+{/redefine}
 
 {if $control->getEditFormFactory()}
 	{var $rowActions = 'row-actions'}
@@ -24,11 +24,11 @@
 	{var $rowActions = 'row-actions-do_not_render'}
 {/if}
 
-{define $rowActions}
+{redefine $rowActions}
 	<a href="{link edit! $primary}" data-datagrid-edit class="ajax btn btn-small btn-primary">Edit</a>
-{/define}
+{/redefine}
 
-{define pagination}
+{redefine pagination}
 <ul class="pagination">
 {if $paginator->isFirst()}
 	<li class="disabled"><a>« First</a></li>
@@ -50,4 +50,4 @@
 	<li><a href="{link paginate!, 'page' => $paginator->pageCount}" class="ajax">Last »</a></li>
 {/if}
 </ul>
-{/define}
+{/redefine}
